# embeddenator-io

./: .copilot  CHANGELOG.md  Cargo.toml  GAP_ANALYSIS.md  MIGRATION_SUMMARY.md  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs
src/io/: buffer.rs  envelope.rs  mod.rs  profiles.rs  serialize.rs  stream.rs  stream_compress.rs
tests/: envelope_tests.rs  integration_tests.rs
