[package]
name = "embeddenator-io"
version = "0.21.0"
edition = "2021"
authors = ["Tyler Zervas <tz-dev@vectorweight.com>"]
description = "Envelope format and serialization for Embeddenator"
license = "MIT"
repository = "https://github.com/tzervas/embeddenator-io"
documentation = "https://docs.rs/embeddenator-io"
keywords = ["embeddenator", "io", "envelope", "serialization"]
categories = ["data-structures", "encoding"]

[features]
default = []
async = ["tokio", "futures"]
compression-zstd = ["zstd"]
compression-lz4 = ["lz4_flex"]
full-compression = ["compression-zstd", "compression-lz4"]

[dependencies]
# Serialization
serde = { version = ">=1.0, <2.0", features = ["derive"] }
bincode = ">=1.3, <4.0"
serde_json = ">=1.0, <2.0"

# Async I/O
tokio = { version = ">=1.0, <2.0", features = ["io-util", "fs", "rt"], optional = true }
futures = { version = ">=0.3, <1.0", optional = true }

# Compression libraries (optional)
zstd = { version = ">=0.13, <1.0", optional = true }
lz4_flex = { version = ">=0.11, <1.0", optional = true }

[dev-dependencies]
proptest = ">=1.0, <2.0"
tokio = { version = ">=1.0, <2.0", features = ["full", "test-util"] }
tempfile = ">=3.8, <4.0"
